--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,6 +4,12 @@ pipeline {
       nodejs 'node'
     }
     stages{
+        stage('Clean workspace') {
+             steps {
+                echo 'Cleaning Workspace...'
+                deleteDir()
+            }
+        }
         stage(checkout) {
             steps {
                 git url: 'https://github.com/gayathri-panneerselvam/angular.git'
