--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,6 +18,7 @@ pipeline {
         stage(build){
             steps {
                 sh 'npm install'
+                sh 'ng build'
             }
         }
 
