--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,7 +17,8 @@ pipeline {
         }
         stage(build){
             steps {
-                
+                npm install --save core-js@^3
+                npm install
                 sh 'ng build'
             }
         }
