--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,7 +17,8 @@ pipeline {
         }
         stage(build){
             steps {
-  
+                sh 'node --version'
+                sh 'npm -v'
                 sh 'npm install'
                 
             }
